--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,61 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/constraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".HomeScreen">
 
     <TextView
-        android:id="@+id/current_date_text"
-        android:layout_width="match_parent"
+        android:id="@+id/textView_current_date"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="current date" />
+        android:text="current date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_conversion_absoluteHeight="19dp"
+        tools:layout_conversion_absoluteWidth="371dp" />
 
     <TextView
-        android:id="@+id/Welcome_message"
-        android:layout_width="match_parent"
+        android:id="@+id/textView_welcome_user"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Welcome, user"
+        android:text="Welcome,"
         android:textColor="@color/black"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_current_date"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="131dp" />
 
-    <androidx.cardview.widget.CardView
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_welcome_user" />
+
+    <!--<androidx.cardview.widget.CardView
         android:id="@+id/card_view_1"
-        android:layout_width="match_parent"
-        android:layout_height="115dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="370dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="5dp"
         android:outlineSpotShadowColor="@color/black"
         app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_welcome_user"
+        tools:layout_conversion_absoluteHeight="115dp"
+        tools:layout_conversion_absoluteWidth="371dp">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/livingroom">
+            android:background="@drawable/livingroom"
+            tools:layout_conversion_absoluteHeight="115dp"
+            tools:layout_conversion_absoluteWidth="371dp"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="90dp">
 
         </ImageView>
-
-
 
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_2"
-        android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
         android:layout_marginTop="10dp"
         android:outlineSpotShadowColor="@color/black"
         app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view_1"
+        tools:layout_conversion_absoluteHeight="115dp"
+        tools:layout_conversion_absoluteWidth="371dp">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/mediaroom">
+            android:layout_width="371dp"
+            android:layout_height="120dp"
+            android:background="@drawable/mediaroom"
+            tools:layout_conversion_absoluteHeight="115dp"
+            tools:layout_conversion_absoluteWidth="371dp"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="215dp">
 
 
         </ImageView>
@@ -65,18 +100,27 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_3"
-        android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
         android:layout_marginTop="10dp"
         android:outlineSpotShadowColor="@color/black"
         app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view_2"
+        tools:layout_conversion_absoluteHeight="115dp"
+        tools:layout_conversion_absoluteWidth="371dp">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="120dp"
             android:background="@drawable/bathroom"
-            android:outlineSpotShadowColor="@color/black">
+            android:outlineSpotShadowColor="@color/black"
+            tools:layout_conversion_absoluteHeight="115dp"
+            tools:layout_conversion_absoluteWidth="371dp"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="340dp">
 
         </ImageView>
 
@@ -85,21 +129,30 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_4"
-        android:layout_width="match_parent"
-        android:layout_height="115dp"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
         android:layout_marginTop="10dp"
         android:outlineSpotShadowColor="@color/black"
         app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view_3"
+        tools:layout_conversion_absoluteHeight="115dp"
+        tools:layout_conversion_absoluteWidth="371dp">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/bedroom">
+            android:layout_height="120dp"
+            android:background="@drawable/bedroom"
+            tools:layout_conversion_absoluteHeight="115dp"
+            tools:layout_conversion_absoluteWidth="371dp"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="465dp">
 
         </ImageView>
 
 
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>-->
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
