--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,7 @@
     tools:context=".MainActivity">
 
 
-    <Button
-        android:id="@+id/btn1"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="39dp"
-        android:padding="20dp"
-        android:text="@string/MainScreenBtnText"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_username" />
+
 
     <!--<com.google.android.material.textfield.TextInputLayout
         android:layout_width="212dp"
@@ -39,21 +27,7 @@
             android:textSize="24sp" />
     </com.google.android.material.textfield.TextInputLayout>-->
 
-    <EditText
-        android:id="@+id/editText_username"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:hint="Your name"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/btn1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView" />
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -72,6 +46,7 @@
         android:id="@+id/TitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:text="@string/MainScreenTitleText"
         android:textColor="#000000"
         android:textSize="36sp"
@@ -89,8 +64,39 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_username"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />
+
+    <EditText
+        android:id="@+id/editText_username"
+        style="@style/Widget.AppCompat.EditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:gravity="center_horizontal"
+        android:hint="Your name"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/button_continue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/WelcomeTextView" />
+
+    <Button
+        android:id="@+id/button_continue"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="39dp"
+        android:padding="20dp"
+        android:text="@string/MainScreenBtnText"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_username" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
